code review by the team is completed and the corrections are made

--- a/FreshnessDetection/bananaFreshnessDetection.ipynb
+++ b/FreshnessDetection/bananaFreshnessDetection.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing the required packages \n",
+    "\n",
     "import tkinter as tk\n",
     "from tkinter import ttk\n",
     "from tkinter import filedialog, messagebox\n",
@@ -238,7 +240,8 @@
     }
    ],
    "source": [
-    " \n",
+    "# loading the yolo 's v8 model\n",
+    "\n",
     "yolo_model = YOLO('yolov8n.pt')   \n",
     "\n",
     "# Load EfficientNet for classification\n",
@@ -297,6 +300,8 @@
     "            writer.writerow({'Banana_ID': timestamp, 'Freshness': {0: 'ripe', 1: 'rotten', 2: 'unripe'}[freshness], 'Shelf_Life': shelf_life})\n",
     "\n",
     " \n",
+    "# app creation using the tkinter ui elements  \n",
+    "\n",
     "class BananaFreshnessApp:\n",
     "    def __init__(self, root):\n",
     "        self.root = root\n",
@@ -353,6 +358,9 @@
     "        self.cap = cv2.VideoCapture(0)\n",
     "        self.update()\n",
     "\n",
+    "\n",
+    "# graph for the freshness index of the banana    \n",
+    "\n",
     "    def plot_freshness(self, freshness_data):\n",
     " \n",
     "        self.ax.clear()\n",
@@ -400,7 +408,7 @@
     "                class_name = detected_class_names[i]\n",
     "                if class_name == \"banana\":\n",
     "                    banana_detections.append(xyxy)\n",
-    "\n",
+    "# sending the isolated part of the banana to the efficient net maintaining high speed detection and classification\n",
     "            freshness_data = []   \n",
     "            if len(banana_detections) > 0:\n",
     "                for idx, xyxy in enumerate(banana_detections):\n",
@@ -412,7 +420,7 @@
     "\n",
     " \n",
     "                    label_text = {0: \"ripe\", 1: \"rotten\", 2: \"unripe\"}[label]\n",
-    "                    colors = {0: (0, 255, 0), 1: (255, 165, 0), 2: (255, 0, 0)}  # Fresh: Green, Ripe: Orange, Rotten: Red\n",
+    "                    colors = {0: (0, 255, 0), 1: (255, 165, 0), 2: (255, 0, 0)}  \n",
     "                    cv2.rectangle(frame, (x1, y1), (x2, y2), colors[label], 2)\n",
     "                    cv2.putText(frame, label_text, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (36, 255, 12), 2)\n",
     "\n",
