the products list was slightly increased

--- a/QCprocessAutomation/QCprocess.ipynb
+++ b/QCprocessAutomation/QCprocess.ipynb
@@ -12933,7 +12933,7 @@
     "    \"surf excel\": [\"matic top load\"],\n",
     "    \"tide\": [\"tide double power\"],\n",
     "    \"aachi\": [\"mutton masala\", \"chicken masala\"],\n",
-    "    \"lay's\": [\"india's magic masala\", \"american style cream & onion\"],\n",
+    "    \"lays\": [\"india's magic masala\", \"american style cream & onion\"],\n",
     "    \"dove\": [\"cream bar\", \"dove advanced sensitive care\", \"hair fall rescue\"],\n",
     "    \"parle-g\": [\"original - gluco-biscuit\", \"parle-g gold\"],\n",
     "    \"maggi\": [\"your favorite masala taste\", \"special masala\"],\n",
@@ -12943,9 +12943,39 @@
     "    \"dettol\": [\"liquid handwash\"],\n",
     "     \"ozamore\": [\"ozenoxacin cream\"],\n",
     "     \"gillette\": [\"7 0 clock\"],\n",
+    "     \"grb\": [\"ghee\"],\n",
+    "\"aashirvaad\": [\"whole wheat atta\", \"superior mp atta\"],\n",
+    "\"gold winner\": [\"refined sunflower oil\"],\n",
+    "\"naga\": [\"whole wheat flour\"],\n",
+    "\"lg\": [\"asafoetida powder\"],\n",
+    "\"mtr\": [\"coriander powder\"],\n",
+    "\"everest\": [\"kashmirilal\", \"black pepper\"],\n",
+    "\"sakthi\": [\"chilli powder\"],\n",
+    "\"lion\": [\"qyno dates\", \"deseeded dates\"],\n",
+    "\"tata\": [\"salt\", \"himalayan rock salt\"],\n",
+    "\"ponds\": [\"dreamflower\", \"sandal\"],\n",
+    "\"engage\": [\"spirit\", \"intrigue\"],\n",
+    "\"yardley\": [\"english lavender\", \"english rose\"],\n",
+    "\"park avenue\": [\"good morning\", \"voyage\"],\n",
+    "\"nycil\": [\"germ expert\"],\n",
+    "\"sensodyne\": [\"Sensitive\", \"Rapid Relief\"],\n",
+    "\"colgate\": [\"SlimSoft Charcoal\", \"MaxFresh\"],\n",
+    "\"vicco\": [\"vajradanti\"],\n",
+    "\"listerine\": [\"Cool Mint\", \"Cavity Fighter\"],\n",
+    "\"brut\": [\"green label\", \"instant\"],\n",
+    "\"levista\": [\"strong\", \"premium\"],\n",
+    "\"chakra gold\": [\"premium tea\",\"care\"],\n",
+    "\"3 roses\": [\"natural care\", \"top star\"],\n",
+    "\"dakshina kashyap\": [\"Yumfills Pie\", \"Choco Fills\"],\n",
+    "\"domex\": [\"lime fresh\", \"ocean fresh\"],\n",
+    "\"Lizol\": [\"citrus\", \"floral\"],\n",
+    "\"duracell\": [\"Ultra\"],\n",
+    "\"cycle\": [\"Agarbathi\"],\n",
+    "\"dheepam\": [\"Lamp Oil\"],\n",
+    "\"cherry\": [\"blossom\"],\n",
+    "\n",
     "\n",
     "}\n",
-    "\n",
     "\n",
     "product_counts = {}   \n",
     "\n",
