Push on the 3 round submission

--- a/QCprocessAutomation/QCprocess.ipynb
+++ b/QCprocessAutomation/QCprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -20,16 +20,15 @@
     "import cv2\n",
     "import json\n",
     "import requests\n",
-    "import spacy\n",
-    "import re\n",
-    "from datetime import datetime,timedelta\n",
     "import tkinter as tk\n",
     "from tkinter import messagebox\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "from ultralytics import YOLO\n",
     "from transformers import pipeline\n",
     "import numpy as np\n",
-    "from rapidfuzz import process \n"
+    "from collections import defaultdict\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
+    " \n"
    ]
   },
   {
@@ -56,12 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    " \n",
-    "nlp = spacy.load(\"en_core_web_trf\")"
+    "Emodel = SentenceTransformer('all-MiniLM-L6-v2')"
    ]
   },
   {
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12916,12 +12914,12 @@
     }
    ],
    "source": [
-    " \n",
+    "# Global variables to store the current frame and detected boxes\n",
     "frame = None\n",
     "boxes = []\n",
     "cap = None\n",
     "\n",
-    " \n",
+    "# Predefined list of brands and products for counting\n",
     "BaP={\n",
     "    \"fortune\": [\"rice bran health\"],\n",
     "    \"elite\": [\"family wonder bread\", \"magic sweet bread\"],\n",
@@ -12973,13 +12971,40 @@
     "\"cycle\": [\"Agarbathi\"],\n",
     "\"dheepam\": [\"Lamp Oil\"],\n",
     "\"cherry\": [\"blossom\"],\n",
-    "\n",
-    "\n",
     "}\n",
     "\n",
-    "product_counts = {}   \n",
+    "# Precompute embeddings for products\n",
+    "product_embeddings = {}\n",
+    "product_to_brand = {}\n",
+    "\n",
+    "for brand, products in BaP.items():\n",
+    "    for product in products:\n",
+    "        embedding = Emodel.encode(product, convert_to_tensor=True)\n",
+    "        product_embeddings[product] = embedding\n",
+    "        product_to_brand[product] = brand\n",
+    "\n",
+    "# the dictionary to store the count of the product\n",
+    "\n",
+    "product_counts = defaultdict(int)\n",
+    "\n",
+    "\n",
+    "def find_closest_product(query, top_k=1):\n",
+    "    query_embedding = Emodel.encode(query, convert_to_tensor=True)\n",
+    "    similarities = {}\n",
+    "\n",
+    "    for product, embedding in product_embeddings.items():\n",
+    "        similarity = util.pytorch_cos_sim(query_embedding, embedding).item()\n",
+    "        similarities[product] = similarity\n",
+    "\n",
+    "    # Sort products by similarity\n",
+    "    sorted_products = sorted(similarities.items(), key=lambda x: x[1], reverse=True)\n",
+    "    return sorted_products[:top_k]\n",
+    "\n",
     "\n",
     " \n",
+    "\n",
+    "              \n",
+    "# Function to save ROIs detected by YOLO\n",
     "def save_rois_in_batches(current_frame, detected_boxes, output_dir):\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "    saved_images = []\n",
@@ -13052,49 +13077,6 @@
     "            print(f\"OCR results saved to {output_json}\")\n",
     "        except Exception as e:\n",
     "            print(f\"Error writing to {output_json}: {e}\")\n",
-    "\n",
-    " \n",
-    "def find_best_product(brand, ocr_text):\n",
-    "    normalized_text = ocr_text.lower()\n",
-    "    products = BaP[brand]\n",
-    "\n",
-    " \n",
-    "    for product in products:\n",
-    "        if product.lower() in normalized_text:\n",
-    "            print(f\"Direct or partial match found for product: {product}\")\n",
-    "            return product\n",
-    "\n",
-    " \n",
-    "    best_match = process.extractOne(normalized_text, products)   \n",
-    "    if best_match and len(best_match)>=2:   \n",
-    "        product, score = best_match[:2]  \n",
-    "        if score > 60:   \n",
-    "            print(f\"Fuzzy match found for product: {product} with score: {score}\")\n",
-    "            return product\n",
-    "    return None\n",
-    "\n",
-    "\n",
-    " \n",
-    " \n",
-    "def find_best_brand(ocr_text):\n",
-    "    normalized_text = ocr_text.lower()\n",
-    "    brands = list(BaP.keys())\n",
-    "\n",
-    " \n",
-    "    for brand in brands:\n",
-    "        if brand.lower() in normalized_text:\n",
-    "            print(f\"Direct match found for brand: {brand}\")\n",
-    "            return brand\n",
-    "\n",
-    " \n",
-    "    best_match = process.extractOne(normalized_text, brands)   \n",
-    "    if best_match and len(best_match)>=2:  \n",
-    "        brand, score = best_match[:2]   \n",
-    "        if score > 60:   \n",
-    "            print(f\"Fuzzy match found for brand: {brand} with score: {score}\")\n",
-    "            return brand\n",
-    "    return None\n",
-    "\n",
     "\n",
     "def detect_products(current_frame, conf_threshold=0.5):\n",
     "    results = model(current_frame)\n",
@@ -13170,9 +13152,11 @@
     "        messagebox.showerror(\"Error\", f\"Could not extract details: {e}\")\n",
     "\n",
     "def validate_expiry_date_and_mrp():\n",
-    " \n",
+    "    \"\"\"\n",
+    "    Load OCR data, extract expiry date and MRP, display results, and clear the OCR data.\n",
+    "    \"\"\"\n",
     "    try:\n",
-    "         \n",
+    "        # Load OCR data from the JSON file\n",
     "        with open('output.json', 'r', encoding='utf-8') as f:\n",
     "            ocr_data = json.load(f)\n",
     "\n",
@@ -13181,7 +13165,7 @@
     "\n",
     "        ocr_text = \" \".join(ocr_data.values())   \n",
     "\n",
-    "        \n",
+    "       \n",
     "        expiry_message, mrp_message = extract_expiry_date_and_mrp(ocr_text)\n",
     "\n",
     " \n",
@@ -13192,13 +13176,13 @@
     "        open('output.json', 'w').close()\n",
     "\n",
     "    except ValueError as ve:\n",
-    "       \n",
+    "        \n",
     "        messagebox.showerror(\"Validation Error\", str(ve))\n",
     "\n",
-    "        \n",
+    "         \n",
     "        messagebox.showinfo(\"Partial Validation Results\", f\"{expiry_message}\\n{mrp_message}\")\n",
     "\n",
-    "       \n",
+    "         \n",
     "        open('output.json', 'w').close()\n",
     "\n",
     "    except FileNotFoundError:\n",
@@ -13208,76 +13192,29 @@
     "        messagebox.showerror(\"Data Error\", \"Failed to decode JSON data from the OCR file.\")\n",
     "\n",
     "    except Exception as e:\n",
-    "        \n",
+    "         \n",
     "        messagebox.showerror(\"Unexpected Error\", f\"An unexpected error occurred: {e}\")\n",
     "\n",
     "def extract_expiry_date_and_mrp(ocr_text):\n",
+    "    \"\"\"\n",
+    "    Send OCR text to the Flask server for expiry date and MRP extraction.\n",
+    "    \"\"\"\n",
+    "    api_url = \"http://localhost:5001/extract_expiry_and_mrp\"\n",
+    "    try:\n",
+    "        response = requests.post(api_url, json={\"ocr_text\": ocr_text})\n",
+    "        response.raise_for_status()\n",
+    "        result = response.json()\n",
+    "\n",
+    "        expiry_message = result.get(\"expiry_message\", \"No expiry information.\")\n",
+    "        mrp_message = result.get(\"mrp_message\", \"No MRP information.\")\n",
+    "\n",
+    "        return expiry_message, mrp_message\n",
+    "\n",
+    "    except requests.RequestException as e:\n",
+    "        return f\"Error in connecting to Flask server: {e}\", \"Error in connecting to Flask server\"\n",
     " \n",
-    "    new_text = preprocess_text(ocr_text)\n",
-    "    doc = nlp(new_text)\n",
     "\n",
-    "    dates = []\n",
-    "    mrp = None\n",
-    "\n",
-    "    \n",
-    "    for ent in doc.ents:\n",
-    "        print(f\"Entity: {ent.text}, Label: {ent.label_}\")   \n",
-    "        if ent.label_ == \"DATE\":\n",
-    "            parsed_date = parse_date(ent.text)\n",
-    "            if parsed_date:\n",
-    "                dates.append(parsed_date)\n",
-    "        elif ent.label_ == \"CARDINAL\" and mrp is None:\n",
-    "            mrp = ent.text  \n",
-    "\n",
-    "    print(f\"Extracted Dates: {dates}\")   \n",
-    "\n",
-    "   \n",
-    "    if dates:\n",
-    "        expiry_date = max(dates)\n",
-    "        expiry_message = validate_expiry_date(expiry_date)\n",
-    "    else:\n",
-    "        expiry_message = \"No valid expiry date found.\"\n",
-    "\n",
-    "    mrp_message = f\"MRP: {mrp}\" if mrp else \"MRP not found.\"\n",
-    "\n",
-    "    return expiry_message, mrp_message\n",
-    "\n",
-    "\n",
-    "\n",
-    "def preprocess_text(ocr_text):\n",
-    " \n",
-    "    return \", \".join(ocr_text.split())\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def parse_date(date_str):\n",
-    " \n",
-    "    date_formats = ['%d/%m/%Y', '%d-%m-%Y', '%d.%m.%Y', '%d%b%Y', '%B %d, %Y', '%m/%Y', '%b %Y', '%B %Y']\n",
-    "\n",
-    "    for fmt in date_formats:\n",
-    "        try:\n",
-    "           \n",
-    "            if fmt in ['%m/%Y', '%b %Y', '%B %Y']:\n",
-    "                date_obj = datetime.strptime(date_str, fmt)\n",
-    "                last_day_of_month = (date_obj.replace(day=28) + timedelta(days=4)).replace(day=1) - timedelta(days=1)\n",
-    "                return last_day_of_month\n",
-    "            else:\n",
-    "                return datetime.strptime(date_str, fmt)\n",
-    "        except ValueError:\n",
-    "            continue\n",
-    "    return None\n",
-    "\n",
-    "def validate_expiry_date(expiry_date):\n",
-    " \n",
-    "    if expiry_date > datetime.now():\n",
-    "        return f\"Expiry Date: {expiry_date.strftime('%Y-%m-%d')} - Valid\"\n",
-    "    else:\n",
-    "        return f\"Expiry Date: {expiry_date.strftime('%Y-%m-%d')} - Expired\"\n",
-    "\n",
-    "\n",
-    "\n",
-    " \n",
+    "# Predefined expected product counts\n",
     "expected_counts = {\n",
     " \"mutton masala\" : 1,\n",
     " \"chicken masala\":1,\n",
@@ -13287,7 +13224,7 @@
     "def validate_counts():\n",
     "    global product_counts\n",
     "\n",
-    "    \n",
+    "     \n",
     "    validation_results = []\n",
     "\n",
     "    for product, counted in product_counts.items():\n",
@@ -13304,54 +13241,47 @@
     "        messagebox.showinfo(\"Count Validation\", \"No products counted.\")\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    " \n",
     "def count_products():\n",
     "    global product_counts\n",
     "\n",
     "    try:\n",
-    "         \n",
+    "        \n",
     "        with open('output.json', 'r', encoding='utf-8') as f:\n",
     "            ocr_data = json.load(f)\n",
     "\n",
-    "        \n",
+    "        # Clear existing product counts\n",
     "        product_counts.clear()\n",
     "\n",
-    "        \n",
+    "        # Iterate through each OCR text extracted from images\n",
     "        for image_path, text in ocr_data.items():\n",
-    "           \n",
-    "            normalized_text = text.lower()\n",
+    "            closest_products = find_closest_product(text)\n",
     "\n",
-    "             \n",
-    "            brand = find_best_brand(normalized_text)\n",
-    "            if brand:\n",
-    "              \n",
-    "                product = find_best_product(brand, normalized_text)\n",
-    "                if product:\n",
-    "                \n",
-    "                    product_counts[product] = product_counts.get(product, 0) + 1\n",
-    "                    print(f\"Identified product: {product} for brand: {brand}\")   \n",
+    "            for product, similarity in closest_products:\n",
+    "                if similarity > 0.7:  # Use a threshold for valid matches\n",
+    "                    product_counts[product] += 1\n",
+    "                    print(f\"Matched Product: {product} (Similarity: {similarity:.2f})\")\n",
     "                else:\n",
-    "                    print(f\"No product match found for brand: {brand}\")\n",
-    "            else:\n",
-    "                print(f\"No brand match found in text: {normalized_text}\")\n",
+    "                    print(f\"No close match found for OCR text: {text}\")\n",
     "\n",
-    "      \n",
-    "        count_message = \"\\n\".join([f\"Brand: {brand}, Product: {product}, Count: {count}\" \n",
-    "                                    for product, count in product_counts.items() \n",
-    "                                    for brand in BaP if product in BaP[brand]])   \n",
+    "        # Display results with brand and product information\n",
+    "        count_message = \"\\n\".join(\n",
+    "            [\n",
+    "                f\"Brand: {product_to_brand[product]}, Product: {product}, Count: {count}\"\n",
+    "                for product, count in product_counts.items()\n",
+    "            ]\n",
+    "        )\n",
     "        if count_message:\n",
     "            messagebox.showinfo(\"Product Count\", f\"Detected Products:\\n{count_message}\")\n",
     "        else:\n",
     "            messagebox.showinfo(\"Product Count\", \"No products detected.\")\n",
     "\n",
-    "       \n",
+    "        # Clear the OCR data in the JSON file after counting is complete\n",
     "        with open('output.json', 'w') as f:\n",
     "            json.dump({}, f)\n",
     "\n",
     "    except Exception as e:\n",
     "        messagebox.showerror(\"Error\", f\"Could not count products: {e}\")\n",
+    "\n",
     "\n",
     "def quit_application():\n",
     "    global cap\n",
@@ -13365,7 +13295,7 @@
     "        root.quit()\n",
     "        root.destroy()\n",
     "\n",
-    " \n",
+    "# Set up the GUI using Tkinter\n",
     "root = tk.Tk()\n",
     "root.title(\"YOLOv8 Object Detection and OCR\")\n",
     "root.geometry(\"500x600\")\n",
