The db were updated

--- a/QCprocessAutomation/QCprocess.ipynb
+++ b/QCprocessAutomation/QCprocess.ipynb
@@ -28,6 +28,10 @@
     "import numpy as np\n",
     "from collections import defaultdict\n",
     "from sentence_transformers import SentenceTransformer, util\n",
+    "import mysql.connector\n",
+    "import mysql.connector\n",
+    "from mysql.connector import Error\n",
+    "from datetime import datetime\n",
     " \n"
    ]
   },
@@ -3077,6 +3081,12 @@
     "\n",
     "product_counts = defaultdict(int)\n",
     "\n",
+    " \n",
+    "\n",
+    " \n",
+    "\n",
+    " \n",
+    "\n",
     "\n",
     "def find_closest_product(query, top_k=1):\n",
     "    query_embedding = Emodel.encode(query, convert_to_tensor=True)\n",
@@ -3359,16 +3369,63 @@
     "        messagebox.showinfo(\"Count Validation\", \"No products counted.\")\n",
     "\n",
     "\n",
+    " \n",
+    "\n",
+    "def save_product_list_db(timestamp, product_counts):\n",
+    "    try:\n",
+    "        conn = mysql.connector.connect(\n",
+    "            host=\"localhost\",\n",
+    "            user=\"root\",\n",
+    "            password=\"Gopi@4182\",\n",
+    "            database=\"flipkartgrid2\"\n",
+    "        )\n",
+    "        if conn.is_connected():\n",
+    "            print(\"Connected to MySQL database.\")\n",
+    "\n",
+    "        cursor = conn.cursor()\n",
+    "\n",
+    " \n",
+    "\n",
+    "        # Insert product data\n",
+    "        for product, count in product_counts.items():\n",
+    "            brand = product_to_brand[product]\n",
+    "              \n",
+    "            print(f\"Inserting: Timestamp={timestamp}, Brand={brand}, Count={count}\")\n",
+    "            cursor.execute('''\n",
+    "                INSERT INTO Brands (Timestamp, Brandname,Product,Count)\n",
+    "                VALUES (%s, %s, %s,%s)\n",
+    "            ''', (timestamp, brand,product ,count))\n",
+    "\n",
+    "        # Commit the transaction\n",
+    "        conn.commit()\n",
+    "        print(\"Data committed successfully.\")\n",
+    "\n",
+    "    except mysql.connector.Error as e:\n",
+    "        print(\"MySQL error:\", e)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"Unexpected error:\", e)\n",
+    "\n",
+    "    finally:\n",
+    "        if conn.is_connected():\n",
+    "            cursor.close()\n",
+    "            conn.close()\n",
+    "            print(\"Database connection closed.\")\n",
+    "\n",
+    "\n",
+    " \n",
     "def count_products():\n",
     "    global product_counts\n",
     "\n",
     "    try:\n",
-    "        \n",
     "        with open('output.json', 'r', encoding='utf-8') as f:\n",
     "            ocr_data = json.load(f)\n",
     "\n",
     "        # Clear existing product counts\n",
     "        product_counts.clear()\n",
+    "\n",
+    "        # Capture the current timestamp\n",
+    "        timestamp = datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
     "\n",
     "        # Iterate through each OCR text extracted from images\n",
     "        for image_path, text in ocr_data.items():\n",
@@ -3380,6 +3437,9 @@
     "                    print(f\"Matched Product: {product} (Similarity: {similarity:.2f})\")\n",
     "                else:\n",
     "                    print(f\"No close match found for OCR text: {text}\")\n",
+    "\n",
+    "        # Save product counts to the database\n",
+    "        save_product_list_db(timestamp, product_counts)\n",
     "\n",
     "        # Display results with brand and product information\n",
     "        count_message = \"\\n\".join(\n",
@@ -3399,6 +3459,7 @@
     "\n",
     "    except Exception as e:\n",
     "        messagebox.showerror(\"Error\", f\"Could not count products: {e}\")\n",
+    "\n",
     "\n",
     "\n",
     "def quit_application():\n",
